--- a/Cryptocurrency Ticker/Base.lproj/Main.storyboard
+++ b/Cryptocurrency Ticker/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,23 +15,26 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Cryptocurrency_Ticker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="e4q-P9-glZ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
+                            </imageView>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J6O-4u-uJK">
-                                <rect key="frame" x="0.0" y="363" width="375" height="304"/>
+                                <rect key="frame" x="0.0" y="435.66666666666674" width="375" height="342.33333333333326"/>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XeY-XU-LGo">
-                                <rect key="frame" x="136" y="304" width="103" height="59"/>
+                                <rect key="frame" x="136" y="376.66666666666669" width="103" height="59"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="50"/>
                                 <color key="textColor" red="0.98999994993209839" green="0.64518314599990845" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uqu-MW-ymy">
-                                <rect key="frame" x="0.0" y="20" width="375" height="284"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="332.66666666666669"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bitcoin" translatesAutoresizingMaskIntoConstraints="NO" id="BvR-Sy-i1N">
-                                        <rect key="frame" x="123.5" y="78.5" width="128" height="128"/>
+                                        <rect key="frame" x="124" y="102.33333333333334" width="128" height="128"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="288-UK-Ahb"/>
                                             <constraint firstAttribute="width" constant="128" id="IhX-p4-nls"/>
@@ -45,11 +48,15 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.070588235294117646" green="0.52941176470588236" blue="0.59215686274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="J6O-4u-uJK" firstAttribute="top" secondItem="XeY-XU-LGo" secondAttribute="bottom" id="7U3-Ir-SZT"/>
                             <constraint firstItem="XeY-XU-LGo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DFX-90-C1e"/>
                             <constraint firstItem="XeY-XU-LGo" firstAttribute="top" secondItem="Uqu-MW-ymy" secondAttribute="bottom" id="Df6-gy-3hg"/>
+                            <constraint firstItem="e4q-P9-glZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="FjP-W7-Ehz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e4q-P9-glZ" secondAttribute="trailing" id="Fxl-71-Rdz"/>
+                            <constraint firstItem="e4q-P9-glZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HDQ-89-pjQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="e4q-P9-glZ" secondAttribute="bottom" id="W5w-VE-he4"/>
                             <constraint firstItem="J6O-4u-uJK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YC6-eU-iVE"/>
                             <constraint firstItem="Uqu-MW-ymy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bif-RF-yxm"/>
                             <constraint firstItem="XeY-XU-LGo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bnZ-O9-D0C"/>
@@ -67,6 +74,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bitcoin" width="335" height="335"/>
+        <image name="background" width="640" height="1136"/>
+        <image name="bitcoin" width="333" height="333"/>
     </resources>
 </document>
